--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -660,9 +660,9 @@ Keen.ready(function(){
   .width(400)
   .render();
           
-   //     chart
-    //    	.parseRawData({ result: result1})
-    //      .render();
+        chart
+        	.parseRawData({ result: result1[i].value})
+          .render();
     });
 });
   
