--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -662,8 +662,12 @@ Keen.ready(function(){
           .render();
     });
 });
-  
+
 </script>
+  <div id='map'></div>
+
+<script>
+  
 mapboxgl.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg';
 var map = new mapboxgl.Map({
     container: 'map',
