--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -609,7 +609,7 @@ Keen.ready(function(){
         .chartOptions({
             data: {
             	axes: {
-              	'Difference': 'y2',
+              	'Difference': 'y2'
               }
             },
             axis: {
