--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -609,7 +609,7 @@ Keen.ready(function(){
         .chartOptions({
             data: {
             	axes: {
-              	'difference': 'y2'
+              	'Difference': 'y2'
                }         
             },
             axis: {
@@ -626,7 +626,7 @@ Keen.ready(function(){
             tooltip: {
             	format: {
               	value: function(name, ratio, id, index) {
-                  if(id === 'difference') {
+                  if(id === 'Difference') {
                   	return name.toFixed(2) + "%"
                   } else {
                   	return name;
