--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -601,8 +601,8 @@ Keen.ready(function(){
     });
     
         var chart = new Keen.Dataviz()
-        .library("c3")
-        .chartType("line")
+      //  .library("c3")
+        .chartType("linechart")
         .el(document.getElementById("KPI"))
         .height(300)
         .colors(['#FFC7CB', '#ABD2D9', '#222222'])
