--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -601,7 +601,7 @@ Keen.ready(function(){
     });
     
         var chart = new Keen.Dataviz()
-      //  .library("c3")
+        .library("c3")
         .chartType("linechart")
         .el(document.getElementById("KPI"))
         .height(300)
