--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -605,7 +605,7 @@ Keen.ready(function(){
                     }
                 },
                 y2: {
-                  show: true
+                  show: false
                 }
             },
             tooltip: {
