--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -332,7 +332,7 @@ Keen.ready(function(){
   .chartType("metric")
   .colors(["#6ab975"])
   .title("CO2")
-  .width(400)
+  .width("auto")
   .render();
       
        // and draw a column chart
