--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -385,7 +385,7 @@ Keen.ready(function(){
       });      
       client.draw(monthchart, document.getElementById("mycharttt"), {
         chartType: "columnchart",
-        title: "daily",
+        title: "monthly",
         height: "250",
         width: "auto",
           chartOptions: {
