--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -235,8 +235,8 @@ Keen.ready(function(){
         "property_value": "48ff6e065067555013541287"
     }],
       
-    interval:"daily",
-    timeframe: "this_2_weeks",
+    interval:"monthly",
+    timeframe: "this_1_years",
     timezone: "America/Sao_Paulo"
   });
   
