--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -587,7 +587,7 @@ Keen.ready(function(){
     
         var chart = new Keen.Dataviz()
         .library("c3")
-        .chartType("line")
+        .chartType("column")
         .el(document.getElementById("KPI"))
         .height(300)
         .colors(['#FFC7CB', '#ABD2D9', '#222222'])
@@ -634,7 +634,7 @@ Keen.ready(function(){
             value: [
             	{ category: 'this month', result: result1[i].value },
               { category: 'last month', result: result2[i].value },
-              { category: 'Difference', result: (1 - (result1[i].value / result2[i].value)) * 100 }
+         //     { category: 'Difference', result: (1 - (result1[i].value / result2[i].value)) * 100 }
             ]
           }
           
