--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -586,8 +586,8 @@ Keen.ready(function(){
     });
     
         var chart = new Keen.Dataviz()
-        .library("c3")
-        .chartType("column")
+        //.library("c3")
+        .chartType("columnchart")
         .el(document.getElementById("KPI"))
         .height(300)
         .colors(['#FFC7CB', '#ABD2D9', '#222222'])
