--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -590,7 +590,7 @@ Keen.ready(function(){
         .chartType("columnchart")
         .el(document.getElementById("KPI"))
         .height(300)
-        .colors(['#FFC7CB', '#ABD2D9', '#222222'])
+      //  .colors(['#FFC7CB', '#ABD2D9', '#222222'])
         .chartOptions({
             data: {
             	axes: {
