--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -330,7 +330,7 @@ Keen.ready(function(){
   .el(document.getElementById('perc'))
   .parseRawData({ result: 1896 })
   .chartType("metric")
-  .colors(["#6ab975"])
+ // .colors(["#6ab975"])
   .title("CO2")
   .width("auto")
   .render();
