--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       
     </div>
   </div>
-
+<embed src="https://grey2.herokuapp.com/ui/#/0" style="width:1200px; height:1000px;">
   <div class="content">
     <div class="container">
       <div class="row">
