--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet" type='text/css' href="assets/lib/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" type='text/css' href="assets/css/keen-static.css" />
   <link rel="stylesheet" type='text/css' href="assets/css/keen-dashboards.css" />
-</head>
-<body>
-
+  
+<style>body { margin: 0px; } .embed-container { position: relative; padding-bottom: 100%; height: 0; overflow: hidden; max-width: 100%; min-height: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
+ </head>
+  <body>
+  
   <div class="masthead hero">
     <div class="container">
 
@@ -41,7 +43,7 @@
       
     </div>
   </div>
-<div class='embed-container'><iframe src="https://grey2.herokuapp.com/ui/#/0" style='border:0;'></iframe></div>
+    <div class='embed-container'><iframe src='https://client.myapp.com' style='border:0;'></iframe></div>
   <div class="content">
     <div class="container">
       <div class="row">
