--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       
     </div>
   </div>
-    <div class='embed-container'><iframe src='https://client.myapp.com' style='border:0;'></iframe></div>
+    <div class='embed-container'><iframe src='https://grey2.herokuapp.com/ui/#/0' style='border:0;'></iframe></div>
   <div class="content">
     <div class="container">
       <div class="row">
