--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 <style>body { margin: 0px; } .embed-container { position: relative; padding-bottom: 100%; height: 0; overflow: hidden; max-width: 100%; min-height: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
  </head>
   <body>
+      
+  <div class="masthead hero">
+    <div class="container">
       <h1>IoT demo</h1>
      <h3></h3>
+      <div/>
+      <div/>
     <div class='embed-container'><iframe src='https://grey2.herokuapp.com/ui/#/0' style='border:0;'></iframe></div>
   <div class="content">
     <div class="container">
